--- a/modules/_font.sass
+++ b/modules/_font.sass
@@ -62,3 +62,11 @@ $sans: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Mei
   @at-root
     @import '//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css'
 
+// +import-noto
+//font-family: 'Noto Sans Japanese', san-serif
+=import-noto
+  @at-root
+    @import '//fonts.googleapis.com/earlyaccess/notosansjapanese.css'
+
+
+
