--- a/modules/_break-word.sass
+++ b/modules/_break-word.sass
@@ -1,4 +1,9 @@
-=break-word
-  white-space: normal
-  word-break: break-all
-  word-wrap: break-word
+=break-word($break: true)
+  @if $break == true
+    white-space: normal
+    word-break: break-all
+    word-wrap: break-word
+  @else
+    white-space: nowrap
+    word-break: keep-all
+    word-wrap: normal
