--- a/components/_form.sass
+++ b/components/_form.sass
@@ -31,7 +31,7 @@
     margin: 0
     padding: 6px 0 10px $w
     box-sizing: border-box
-    +media($media-md)
+    +media
       padding: 6px 0 10px 0
 
     > label:first-child,
@@ -46,7 +46,7 @@
       margin: 0
       padding-right: 20px
       width: $w
-      +media($media-md)
+      +media
         position: relative
         width: 100%
         padding-right: 0
