--- a/clones/_breakpoint.sass
+++ b/clones/_breakpoint.sass
@@ -1,27 +1,11 @@
-// =breakpoint($point, $mobile-width: 640px, $tablet-width: 960px)
-//   $mobile: '(max-width: #{$mobile-width})'
-//   $tablet: '(min-width: #{$mobile-width}) and (max-width: #{$tablet-width + 20px})'
-//   $desktop: '(min-width: #{$tablet-width})'
-
-//   @if $point == mobile
-//     @media #{$mobile}
-//       @content
-//   @else if $point == tablet
-//     @media #{$tablet}
-//       @content
-//   @else if $point == retina
-//     @media (-webkit-min-device-pixel-ratio: 2)
-//       @content
-//   @else if $point == desktop
-//     @media #{$desktop}
-//       @content
-
-=breakpoint-down($w: $media-md)
-  @media (max-width: '#{$w}')
+=breakpoint-down($name: md, $breakpoints: $media-breakpoints)
+  $map: map-get($breakpoints, $name)
+  @media (max-width: $map)
     @content
 
-=breakpoint-up($w: $media-md)
-  @media (min-width: '#{$w}')
+=breakpoint-up($name: md, $breakpoints: $media-breakpoints)
+  $map: map-get($breakpoints, $name)
+  @media (min-width: $map)
     @content
 
 =breakpoint-retina
@@ -30,6 +14,6 @@
 
 //shortcuts
 
-=media($w: $media-md)
-  +breakpoint-down($w)
+=media($name: md)
+  +breakpoint-down($name)
     @content
