--- a/utils/_visibility.sass
+++ b/utils/_visibility.sass
@@ -1,31 +1,33 @@
-=util-hidden($bp: xs, $size: 0)
-  @at-root
-    .hidden-#{$bp}-up
-      @media (min-width: $size)
-        display: none !important
-    .hidden-#{$bp}-down
-      @media (max-width: $size)
-        display: none !important
+// =util-hidden($name: xs, $breakpoints: $media-breakpoints)
+//   @at-root
+//     $map: map-get($breakpoints, $name)
+//     .hidden-#{$bp}-up
+//       @media (min-width: $map)
+//         display: none !important
+//     .hidden-#{$bp}-down
+//       @media (max-width: $map)
+//         display: none !important
 
-=util-visible($bp: xs, $size: 0)
-  @at-root
-    .visible-#{$bp}-up
-      @media (min-width: $size)
-        display: block !important
-    .visible-#{$bp}-down
-      @media (max-width: $size)
-        display: block !important
+// =util-visible($name: xs, $breakpoints: $media-breakpoints)
+//   @at-root
+//     $map: map-get($breakpoints, $name)
+//     .visible-#{$bp}-up
+//       @media (min-width: $map)
+//         display: block !important
+//     .visible-#{$bp}-down
+//       @media (max-width: $map)
+//         display: block !important
 
 =util-visibility
-  +util-hidden(xs, $media-xs)
-  +util-hidden(sm, $media-sm)
-  +util-hidden(md, $media-md)
-  +util-hidden(lg, $media-lg)
+  // +util-hidden(xs)
+  // +util-hidden(sm)
+  // +util-hidden(md)
+  // +util-hidden(lg)
 
-  +util-visible(xs, $media-xs)
-  +util-visible(sm, $media-sm)
-  +util-visible(md, $media-md)
-  +util-visible(lg, $media-lg)
+  // +util-visible(xs)
+  // +util-visible(sm)
+  // +util-visible(md)
+  // +util-visible(lg)
 
-  .is-hidden
-    display: none !important
+  // .is-hidden
+  //   display: none !important
