--- a/components/_body.sass
+++ b/components/_body.sass
@@ -1,15 +1,14 @@
-=body
-  $color-def: #222
+=body($color-def: #222)
   $color-accent: #f22
-  $margin-contents-bottom: 30px
+  $margin-contents-bottom: 4rem
 
   width: 100%
   text-align: left
 
-  > *
-    margin-bottom: 30px
-    &:last-child
-      margin-bottom: 0
+  // > *
+  //   margin-bottom: 2rem
+  //   &:last-child
+  //     margin-bottom: 0
 
   h1,h1 a,
   h2,h2 a,
@@ -17,24 +16,28 @@
   h4,h4 a,
   h5,h5 a,
   h6,h6 a
+    +break-word
     clear: both
     color: $color-def
     font-weight: normal
-    line-height: 1.6em
   small
-    font-size: 12px
+    font-size: 0.8rem
 
   h1,h1 a
-    font-size: 30px
-    margin-bottom: 20px
+    font-size: 2rem
+    line-height: 3rem
+    margin-top: 2rem
+    margin-bottom: 2rem
 
   h2,h2 a
-    font-size: 24px
-    margin-bottom: 20px
+    font-size: 1.8rem
+    margin-top: 2rem
+    margin-bottom: 2rem
 
   h3,h3 a
-    font-size: 22px
-    margin-bottom: 20px
+    font-size: 1.4rem
+    margin-top: 2rem
+    margin-bottom: 2rem
 
   h4,h4 a
     font-size: 20px
@@ -61,9 +64,8 @@
     padding-right: 3px
 
   p
-    font-size: 16px
+    +font
     clear: both
-    line-height: 1.8em
     img
       max-width: 100%
     > code
@@ -77,7 +79,7 @@
       border: 1px solid $c - 10
 
   a
-    font-size: 16px
+    +font
     color: $color-def
     text-decoration: underline
     &:hover
@@ -90,6 +92,7 @@
     &:before
       opacity: 0.2
       margin-left: 4px
+      font-size: 0.8rem
 
   img
     margin: 0
@@ -107,10 +110,10 @@
       padding-bottom: 5px
       list-style-type: disc
       a
-        +font(14px)
+        +font
   ol
     li
-      +font(14px)
+      +font
       list-style: decimal
       border-top: 1px dotted #ddd
       padding: 8px 0 5px 0
@@ -118,7 +121,7 @@
       &:first-child
         border-top: none
 
-  table
+  > table
     width: 100%
     border-collapse: collapse
     th
@@ -130,21 +133,24 @@
       padding: 5px 10px 5px 10px
       +font(14px)
 
-  pre
-    > code
-      width: auto !important
-      padding: 20px
-      margin-top: 50px
-      margin-bottom: 50px
-      display: block
-      line-height: 1.4em
-      background: #f8f8f8
+  pre > code,
+  .highlight
+    width: auto !important
+    padding: 20px
+    margin-top: 2rem
+    margin-bottom: 2rem
+    display: block
+    background: #f8f8f8
+    border: 1px solid #eee
+    font-family: Consolas, 'Liberation Mono', Courier, monospace
+    font-size: 0.8rem
+    line-height: 1.6rem
+    overflow: auto
+    p
       font-family: Consolas, 'Liberation Mono', Courier, monospace
-      font-size: 13px
-      overflow: auto
-      p
-        font-family: Consolas, 'Liberation Mono', Courier, monospace
-        font-size: 13px
+      font-size: 0.8rem
+    pre
+      margin-bottom: 0
 
   blockquote
     +clearfix
