--- a/modules/_reset.sass
+++ b/modules/_reset.sass
@@ -1,3 +1,8 @@
+=reset-base
+  font-size: inherit
+  line-height: inherit
+  box-sizing: border-box
+
 =reset-form($c: transparent)
   background-image: linear-gradient(transparent, transparent)
   appearance: none
@@ -15,10 +20,9 @@
   margin: 0
   padding: 0
   list-style: none
-  display: block
+  display: inline-block
   li
     display: inline-block
-    vertical-align: top
 
 =reset-img
   margin: 0
