fix for middleman

--- a/_all.sass
+++ b/_all.sass
@@ -1,49 +1,49 @@
 //example:
-// @import "vendor/spuit/addons/reset"
-// @import "vendor/spuit/all"
+// @import "./addons/reset"
+// @import "./all"
 
-@import "vendor/spuit/min"
+@import "./min"
 
 //spuit effects
-@import "vendor/spuit/effects/_blur"
-@import "vendor/spuit/effects/_timing-functions"
-@import "vendor/spuit/effects/_timing-functions-elastic"
+@import "./effects/_blur"
+@import "./effects/_timing-functions"
+@import "./effects/_timing-functions-elastic"
 
 //spuit elements
-@import "vendor/spuit/elements/_input"
-@import "vendor/spuit/elements/_radio"
-@import "vendor/spuit/elements/_select"
-@import "vendor/spuit/elements/_checkbox"
+@import "./elements/_input"
+@import "./elements/_radio"
+@import "./elements/_select"
+@import "./elements/_checkbox"
 
-@import "vendor/spuit/elements/_dl"
-@import "vendor/spuit/elements/_ul"
-@import "vendor/spuit/elements/_hr"
-@import "vendor/spuit/elements/_table"
+@import "./elements/_dl"
+@import "./elements/_ul"
+@import "./elements/_hr"
+@import "./elements/_table"
 
 //spuit modules
-@import "vendor/spuit/components/_link"
-@import "vendor/spuit/components/_button"
-@import "vendor/spuit/components/_body"
-@import "vendor/spuit/components/_form"
-@import "vendor/spuit/components/_gist"
-@import "vendor/spuit/components/_icon"
-@import "vendor/spuit/components/_markdown"
-@import "vendor/spuit/components/_meta"
-@import "vendor/spuit/components/_pulldown"
-@import "vendor/spuit/components/_scaffold"
-@import "vendor/spuit/components/_searchbox"
-@import "vendor/spuit/components/_triangle"
-@import "vendor/spuit/components/_footer-fixed"
-@import "vendor/spuit/components/_wordwrap-fadeout"
-@import "vendor/spuit/components/_grids"
-@import "vendor/spuit/components/_wrap-center"
-@import "vendor/spuit/components/_wrap"
-@import "vendor/spuit/components/_split"
-@import "vendor/spuit/components/_shoulder"
-@import "vendor/spuit/components/_messages"
+@import "./components/_link"
+@import "./components/_button"
+@import "./components/_body"
+@import "./components/_form"
+@import "./components/_gist"
+@import "./components/_icon"
+@import "./components/_markdown"
+@import "./components/_meta"
+@import "./components/_pulldown"
+@import "./components/_scaffold"
+@import "./components/_searchbox"
+@import "./components/_triangle"
+@import "./components/_footer-fixed"
+@import "./components/_wordwrap-fadeout"
+@import "./components/_grids"
+@import "./components/_wrap-center"
+@import "./components/_wrap"
+@import "./components/_split"
+@import "./components/_shoulder"
+@import "./components/_messages"
 
 //spuit shortcuts
-@import "vendor/spuit/shortcuts/_position"
-@import "vendor/spuit/shortcuts/_rect"
-@import "vendor/spuit/shortcuts/_circle"
-@import "vendor/spuit/shortcuts/_border-box"
+@import "./shortcuts/_position"
+@import "./shortcuts/_rect"
+@import "./shortcuts/_circle"
+@import "./shortcuts/_border-box"
