--- a/_min.sass
+++ b/_min.sass
@@ -1,45 +1,44 @@
 //variables
-@import "vendor/spuit/_variables"
+@import "./_variables"
 
 //functions
-@import "vendor/spuit/functions/_strip-unit"
+@import "./functions/_strip-unit"
 
 //clones (compass, bourbon, prefix, ...)
-@import "vendor/spuit/clones/_animation"
-@import "vendor/spuit/clones/_backface-visibility"
-@import "vendor/spuit/clones/_background-image"
-@import "vendor/spuit/clones/_breakpoint"
-@import "vendor/spuit/clones/_clearfix"
-@import "vendor/spuit/clones/_inline-block"
-@import "vendor/spuit/clones/_linear-gradient"
-@import "vendor/spuit/clones/_opacity"
-@import "vendor/spuit/clones/_prefix"
-@import "vendor/spuit/clones/_selection"
-@import "vendor/spuit/clones/_text-shadow"
-@import "vendor/spuit/clones/_transform"
-@import "vendor/spuit/clones/_transition"
-@import "vendor/spuit/clones/_text-size-adjust"
-@import "vendor/spuit/clones/_placeholder"
+@import "./clones/_animation"
+@import "./clones/_backface-visibility"
+@import "./clones/_background-image"
+@import "./clones/_breakpoint"
+@import "./clones/_clearfix"
+@import "./clones/_inline-block"
+@import "./clones/_linear-gradient"
+@import "./clones/_opacity"
+@import "./clones/_prefix"
+@import "./clones/_selection"
+@import "./clones/_text-shadow"
+@import "./clones/_transform"
+@import "./clones/_transition"
+@import "./clones/_text-size-adjust"
+@import "./clones/_placeholder"
 
 //spuit utils
-@import "vendor/spuit/utils/_anim"
-@import "vendor/spuit/utils/_visibility"
-@import "vendor/spuit/utils/_margin"
-@import "vendor/spuit/utils/_padding"
-@import "vendor/spuit/utils/_clear"
-@import "vendor/spuit/utils/_size"
-@import "vendor/spuit/utils/_flexboxgrid"
-@import "vendor/spuit/utils/_stickey-footer"
+@import "./utils/_anim"
+@import "./utils/_visibility"
+@import "./utils/_margin"
+@import "./utils/_padding"
+@import "./utils/_clear"
+@import "./utils/_size"
+@import "./utils/_flexboxgrid"
+@import "./utils/_stickey-footer"
 
 //spuit modules
-@import "vendor/spuit/modules/_hide-text"
-@import "vendor/spuit/modules/_nowrap"
-@import "vendor/spuit/modules/_debug"
-@import "vendor/spuit/modules/_disc"
-@import "vendor/spuit/modules/_break-word"
-@import "vendor/spuit/modules/_fa"
-@import "vendor/spuit/modules/_font-face"
-@import "vendor/spuit/modules/_font"
-@import "vendor/spuit/modules/_reset"
-@import "vendor/spuit/modules/_replace"
-@import "vendor/spuit/modules/_vertical-align"
+@import "./modules/_hide-text"
+@import "./modules/_nowrap"
+@import "./modules/_disc"
+@import "./modules/_break-word"
+@import "./modules/_fa"
+@import "./modules/_font-face"
+@import "./modules/_font"
+@import "./modules/_reset"
+@import "./modules/_replace"
+@import "./modules/_vertical-align"
