--- a/modules/_fa.sass
+++ b/modules/_fa.sass
@@ -1,11 +1,9 @@
 =fa($content: '\f105')
-  +inline-block
+  display: inline-block
   font-family: FontAwesome
   font-style: normal
   font-weight: normal
   line-height: 1
   text-indent: 0
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
   @if $content
     content: $content
