--- a/components/_form.sass
+++ b/components/_form.sass
@@ -18,13 +18,12 @@
     +reset-ul
     li
       display: block
-      margin-bottom: 10px
+      margin-bottom: 1rem
       &:last-child
-        margin-bottom: 20px
+        margin-bottom: 2rem
 
   fieldset
     $w: 150px
-    font-size: 16px
     position: relative
     display: block
     border: none
@@ -37,7 +36,6 @@
     > label:first-child,
     legend
       +border-box
-      font-size: 16px
       color: $color-black
       position: absolute
       left: 0px
@@ -55,7 +53,6 @@
       margin-top: 5px
       margin-bottom: 0
       color: $color-gray
-      font-size: 12px
 
     &.is-validate
       $color-red: #e74c3c
