--- a/_all.sass
+++ b/_all.sass
@@ -14,6 +14,7 @@
 @import "./elements/_radio"
 @import "./elements/_select"
 @import "./elements/_checkbox"
+@import "./elements/_fieldset"
 
 @import "./elements/_dl"
 @import "./elements/_ul"
@@ -41,6 +42,7 @@
 @import "./components/_split"
 @import "./components/_shoulder"
 @import "./components/_messages"
+@import "./components/_validate"
 
 //spuit shortcuts
 @import "./shortcuts/_position"
