--- a/components/_form.sass
+++ b/components/_form.sass
@@ -1,67 +1,44 @@
 =form
   input[type=text],
-  input[type=password],
+  textarea,
+  legend,
+  .select,
+  .radio,
+  .radio-inside,
+  .radio-default,
+  .checkbox,
+  .checkbox-inside,
+  .checkbox-default
+    font-size: 1rem
+    line-height: 1.6rem
+
+  p
+    margin-bottom: 0
+
+  input[type=text]
+    +input-base
   textarea
     +input-base
+  fieldset
+    +fieldset-base
   .select
     +select-base
+
   .radio
     +radio-base
+    padding-right: 1rem
   .radio-inside
     +radio-base(span)
+    padding-right: 1rem
+  .radio-default
+    +radio-default
+    padding-right: 1rem
   .checkbox
     +checkbox-base
+    padding-right: 1rem
   .checkbox-inside
     +checkbox-base(span)
-
-  .validate
-    +reset-ul
-    li
-      display: block
-      margin-bottom: 1rem
-      &:last-child
-        margin-bottom: 2rem
-
-  fieldset
-    $w: 150px
-    position: relative
-    display: block
-    border: none
-    margin: 0
-    padding: 6px 0 10px $w
-    box-sizing: border-box
-    +media
-      padding: 6px 0 10px 0
-
-    > label:first-child,
-    legend
-      +border-box
-      color: $color-black
-      position: absolute
-      left: 0px
-      display: inline-block
-      border: none
-      margin: 0
-      padding-right: 20px
-      width: $w
-      +media
-        position: relative
-        width: 100%
-        padding-right: 0
-
-    .small
-      margin-top: 5px
-      margin-bottom: 0
-      color: $color-gray
-
-    &.is-validate
-      $color-red: #e74c3c
-      input,
-      textarea,
-      .select
-        border-color: $color-red
-      .radio label:before,
-      .checkbox label:before
-        border-color: $color-red
-      p
-        color: $color-red
+    padding-right: 1rem
+  .checkbox-default
+    +checkbox-default
+    padding-right: 1rem
