--- a/_all.sass
+++ b/_all.sass
@@ -29,7 +29,6 @@
 @import "./components/_gist"
 @import "./components/_icon"
 @import "./components/_markdown"
-@import "./components/_meta"
 @import "./components/_pulldown"
 @import "./components/_scaffold"
 @import "./components/_searchbox"
@@ -48,4 +47,6 @@
 @import "./shortcuts/_position"
 @import "./shortcuts/_rect"
 @import "./shortcuts/_circle"
-@import "./shortcuts/_border-box"
+@import "./shortcuts/_margin"
+@import "./shortcuts/_scale"
+@import "./shortcuts/_rotate"
