--- a/elements/_input.sass
+++ b/elements/_input.sass
@@ -1,4 +1,4 @@
-=input-base
+=input-base($w: auto)
   +reset-form
   $border: 1px solid #ddd
   $color-key: rgba(#529ef6, 0.2)
@@ -6,6 +6,7 @@
 
   // font-size: inherit
   display: inline-block
+  width: $w
   padding: 0.5rem
   border: $border
   background: #fff
