--- a/components/_wordwrap-fadeout.sass
+++ b/components/_wordwrap-fadeout.sass
@@ -10,7 +10,7 @@
     height: $m
     background: $c
   &:after
-    +background-image(linear-gradient(to top, rgba($c,1), rgba($c,0)))
+    background-image: linear-gradient(to top, rgba($c,1), rgba($c,0))
     content: ''
     position: absolute
     bottom: $m
