--- a/components/_wrap.sass
+++ b/components/_wrap.sass
@@ -4,26 +4,19 @@
   padding: 0
   text-align: center
   min-width: $n
-  +media(tablet)
-    width: auto
-    min-width: 0
-  +media(mobile)
+  +breakpoint-down(sm)
     width: auto
     min-width: 0
 
   @at-root
     #{&}__inner
-      +border-box
+      box-sizing: border-box
       position: relative
       display: block
       width: $n
       margin: 0 auto
       text-align: left
-      +media(tablet)
-        width: 100%
-        padding-left: $margin
-        padding-right: $margin
-      +media(mobile)
+      +breakpoint-down(sm)
         width: 100%
         padding-left: $margin
         padding-right: $margin
