--- a/components/_pulldown.sass
+++ b/components/_pulldown.sass
@@ -50,7 +50,7 @@
       +break-points('mobile')
         padding: 6px 4px
     &:after
-      +rotate(180deg)
+      transform: rotate(180deg)
       content: ''
       position: absolute
       width: 0
