fix writing style

--- a/modules/_font.sass
+++ b/modules/_font.sass
@@ -28,19 +28,19 @@
 // font-family: 'Open Sans', $sans
 =import-opensans
   @at-root
-    @import '//fonts.googleapis.com/css?family=Open+Sans:400,300,700'
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,700')
 
 // +import-roboto
 // font-family: 'Roboto', $serif
 =import-roboto($size: 1em, $line-height: normal, $weight: normal)
   @at-root
-    @import url('http://fonts.googleapis.com/css?family=Roboto')
+    @import url('https://fonts.googleapis.com/css?family=Roboto')
 
 // +import-muli
 // font-family: 'Muli', $serif
 =import-muli($size: 1em, $line-height: normal, $weight: normal)
   @at-root
-    @import url('http://fonts.googleapis.com/css?family=Muli')
+    @import url('https://fonts.googleapis.com/css?family=Muli')
 
 // +import-gilda
 // font-family: 'Gilda Display', $serif
@@ -52,15 +52,15 @@
 // font-family: 'Montserrat', $sans
 =import-montserrat($size: 1em, $line-height: normal, $weight: normal)
   @at-root
-    @import '//fonts.googleapis.com/css?family=Montserrat'
+    @import url('//fonts.googleapis.com/css?family=Montserrat')
 
 // +import-fa
 =import-fa
   @at-root
-    @import '//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'
+    @import url('https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css')
 
 // +import-noto
 //font-family: 'Noto Sans Japanese', san-serif
 =import-noto
   @at-root
-    @import '//fonts.googleapis.com/earlyaccess/notosansjapanese.css'
+    @import url('//fonts.googleapis.com/earlyaccess/notosansjapanese.css')
