--- a/assets/stylesheets/spuit/components/_body.sass
+++ b/assets/stylesheets/spuit/components/_body.sass
@@ -69,7 +69,7 @@
     +font
     clear: both
     code
-      +font-code
+      font-family: $font-code
       margin: 0 4px
       padding: 2px 6px
       font-style: italic
@@ -87,12 +87,12 @@
 
   // アイコンつきリンク
   // a[target="_blank"]
-  > a[target="_blank"], p > a[target="_blank"], li > a[target="_blank"]
-    +icon-fa('\f08e')
-    &:before
-      opacity: 0.2
-      margin-left: 4px
-      font-size: 0.8rem
+  // > a[target="_blank"], p > a[target="_blank"], li > a[target="_blank"]
+  //   +icon-fa('\f08e')
+  //   &:before
+  //     opacity: 0.2
+  //     margin-left: 4px
+  //     font-size: 0.8rem
 
   img
     margin: 0
@@ -137,12 +137,12 @@
     display: block
     background: #f8f8f8
     border: 1px solid #eee
-    font-family: Consolas, 'Liberation Mono', Courier, monospace
+      font-family: $font-code
     font-size: 0.8rem
     line-height: 1.6rem
     overflow: auto
     p
-      font-family: Consolas, 'Liberation Mono', Courier, monospace
+      font-family: $font-code
       font-size: 0.8rem
     pre
       margin-bottom: 0
