--- a/spuit.scss
+++ b/spuit.scss
@@ -33,5 +33,8 @@
 
 // shortcut components, element
 // FIXME: 未整理、不要なものを削除するまでコメントアウト
-// @import 'assets/stylesheets/spuit/components/xxx';
-// @import 'assets/stylesheets/spuit/element/xxx';
+@import 'assets/stylesheets/spuit/components/icon';
+@import 'assets/stylesheets/spuit/components/button';
+@import 'assets/stylesheets/spuit/elements/table';
+@import 'assets/stylesheets/spuit/elements/input';
+@import 'assets/stylesheets/spuit/elements/fieldset';
