--- a/assets/stylesheets/spuit/components/_button.sass
+++ b/assets/stylesheets/spuit/components/_button.sass
@@ -14,7 +14,8 @@
   padding: 0
   border: none
   outline: none
-  text-decoration: none !important
+  &:link, &:visited, &:hover, &:active, &:active
+    text-decoration: none !important
   &:focus
     outline: none
   &:disabled,
@@ -29,20 +30,24 @@
   pointer-events: none
 
 =button-loading
+  +button-disabled
   +icon-loading
   opacity: 0.6
   pointer-events: none
   cursor: default
 
-// .button-flat
-//   +button-flat(0.5rem 1rem, #529ef6, #fff, 2px)
-=button-flat($p: 0.5rem 1rem, $c: #529ef6, $c-text: #fff, $r: 2px)
+// .button-normal
+//   +button-normal(10px 10px, #529ef6, #fff, 2px)
+=button-normal($p: 10px 10px, $c: #529ef6, $c-text: #fff, $r: 2px)
   +button-base
   border-radius: $r
   border: 1px solid $c
-  background: $c
+  background-color: $c
   color: $c-text
   padding: $p
+  line-height: 1
+  &:focus
+    background-color: $c
   &:hover,
   &:active,
   &.is-current
@@ -51,30 +56,38 @@
     border-color: $c
 
 // .button-semiflat
-//   +button-semiflat(0.5rem 1rem, #529ef6, 10%, #fff, 2px)
-=button-semiflat($p: 0.5rem 1rem, $c: #529ef6, $strangth: 5%, $c-text: #fff, $r: 4px)
+//   +button-semiflat(10px 10px, #529ef6, 10%, #fff, 2px)
+=button-semiflat($p: 10px 10px, $c: #529ef6, $strangth: 5%, $c-text: #fff, $r: 4px)
   +button-base
   border-radius: $r
-  background: $c
+  background-color: $c
   background-image: linear-gradient(to top, $c, lighten($c, $strangth))
   border: 1px solid lighten($c, $strangth)
   color: $c-text
   padding: $p
+  line-height: 1
+  &:focus
+    background-color: $c
+    background-image: linear-gradient(to top, $c, lighten($c, $strangth))
   &:hover,
   &:active,
   &.is-current
-    background: darken($c, $strangth)
+    background-color: darken($c, $strangth)
     background-image: linear-gradient(to top, darken($c, $strangth), $c)
 
 // .button-border
-//   +button-border(0.5rem 1rem, #529ef6, #fff)
-=button-border($p: 0.5rem 1rem, $c: #529ef6, $c-text: #fff, $border: 1px, $r: 2px)
+//   +button-border(10px 10px, #529ef6, #fff)
+=button-border($p: 10px 10px, $c: #529ef6, $c-text: #fff, $border: 1px, $r: 2px)
   +button-base
   border-radius: $r
-  background: transparent
+  background-color: transparent
   padding: $p
   border: $border solid $c
   color: $c
+  line-height: 1
+  &:focus
+    background-color: transparent
+    border: $border solid $c
   &:hover,
   &:active,
   &.is-current
@@ -83,21 +96,23 @@
     border-color: transparet
 
 // .button-emboss
-//   +button-emboss(0.5rem 1rem, #529ef6, #fff, 6px, 4px)
-=button-emboss($p: 0.5rem 1rem, $c: #529ef6, $c-text: #fff, $thickness: 6px, $r: 4px)
+//   +button-emboss(10px 10px, #529ef6, #fff, 6px, 4px)
+=button-emboss($p: 10px 10px, $c: #529ef6, $c-text: #fff, $thickness: 6px, $r: 4px)
   +button-base
-  transition: all 0.1s ease-out
+  transition: all 0.05s ease-out
   transform: translateY(-$thickness)
   box-shadow: 0 $thickness 0 darken($c, 10%)
   border-radius: $r
-  background: $c
+  background-color: $c
   color: $c-text
   padding: $p
+  line-height: 1
+  &:focus
+    background-color: $c
+    box-shadow: 0 $thickness 0 darken($c, 10%)
   &:hover,
   &:active,
   &.is-current
     transform: translateY(0)
-    box-shadow: 0 ($thickness - 2px) 0 darken($c, 20%)
-    background-color: darken($c, 2%)
     box-shadow: 0 0 0 $c
     background-color: darken($c, 10%)
