--- a/assets/stylesheets/spuit/elements/_input.sass
+++ b/assets/stylesheets/spuit/elements/_input.sass
@@ -1,21 +1,27 @@
-=input-base($w: auto)
+=input-base($w: auto, $p: 5px 10px)
   +reset-form
-  $border: 1px solid #ddd
-  $color-key: rgba(#529ef6, 0.2)
-  $color-bg-select: #fffff2
-
-  // font-size: inherit
+  font-size: inherit
   display: inline-block
   width: $w
-  padding: 0.5rem
-  border: $border
-  background: #fff
-
+  padding: $p
+  box-sizing: border-box
+  line-height: 1
   &::placeholder
-    // font-size: inherit
-    color: #ddd
-
+    font-size: inherit
   &:focus
-    border: 1px solid $color-key
     outline: 0
+
+=input-normal($w: auto, $p: 5px 10px)
+  +reset-form
+  +input-base($w, $p)
+
+  $color-border: #ddd
+  $color-border-key: rgba(#529ef6, 0.5)
+  $color-bg-select: #fffff2
+
+  border: 1px solid $color-border
+  &::placeholder
+    color: #ddd
+  &:focus
+    border: 1px solid $color-border-key
     background: $color-bg-select
