--- a/assets/stylesheets/spuit/modules/_reset.scss
+++ b/assets/stylesheets/spuit/modules/_reset.scss
@@ -3,6 +3,7 @@
   padding: 0;
   border-radius: 0;
   background-image: linear-gradient(transparent, transparent);
+  background: transparent;
   appearance: none;
   border: none;
   outline: none;
