--- a/assets/stylesheets/spuit/elements/_fieldset.sass
+++ b/assets/stylesheets/spuit/elements/_fieldset.sass
@@ -37,9 +37,10 @@
   border: 0
   &:last-child
     margin-bottom: 0
+  label, legend
+    margin-bottom: 0
   > legend
     width: $legend-width
     padding-right: $gutter
-    margin-bottom: 0
   > *:not(legend)
     flex: 1
