--- a/spuit.scss
+++ b/spuit.scss
@@ -38,3 +38,5 @@
 @import 'assets/stylesheets/spuit/elements/table';
 @import 'assets/stylesheets/spuit/elements/input';
 @import 'assets/stylesheets/spuit/elements/fieldset';
+@import 'assets/stylesheets/spuit/elements/radio';
+@import 'assets/stylesheets/spuit/elements/checkbox';
