--- a/assets/stylesheets/styles/config/_mixins.scss
+++ b/assets/stylesheets/styles/config/_mixins.scss
@@ -1,7 +1,7 @@
 @include include-opensans;
 
 @mixin font($size: 1rem, $line-height: normal, $weight: 400) {
-  font-family: 'Open Sans', $font-serif;
+  font-family: 'Open Sans', $font-sans;
   font-size: $size;
   font-weight: $weight;
   line-height: $line-height;
