セレクトボックスのスタイルを追加

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -72,7 +72,9 @@ body {
   .checkbox-inside {
     @include checkbox-base(span);
   }
-
+  .select {
+    @include select-base;
+  }
   .table {
     @include table;
     margin-bottom: 10px;
