--- a/spuit.scss
+++ b/spuit.scss
@@ -40,3 +40,4 @@
 @import 'assets/stylesheets/spuit/elements/fieldset';
 @import 'assets/stylesheets/spuit/elements/radio';
 @import 'assets/stylesheets/spuit/elements/checkbox';
+@import 'assets/stylesheets/spuit/elements/select';
