--- a/spuit.scss
+++ b/spuit.scss
@@ -25,6 +25,8 @@
 @import 'assets/stylesheets/spuit/includes/webfonts';
 @import 'assets/stylesheets/spuit/includes/stickey-footer';
 @import 'assets/stylesheets/spuit/includes/spuit-utils';
+@import 'assets/stylesheets/spuit/includes/normalize';
+@import 'assets/stylesheets/spuit/includes/grid';
 
 // shortcut mixins
 @import 'assets/stylesheets/spuit/shortcuts/absolute';
