--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -4,6 +4,8 @@
 @import 'styles/config/mixins';
 
 @include include-animations
+@include include-normalize
+@include include-grid
 
 // basic styles
 
@@ -55,6 +57,7 @@ body {
   }
   textarea {
     @include input;
+    line-height: 1.6rem;
     height: 120px;
   }
   legend {
@@ -106,7 +109,20 @@ body {
     @include font;
     @include button-emboss;
   }
-
+  .button-group {
+    display: flex;
+    justify-content: space-between;
+    > * {
+      width: 100%;
+      border-radius: 0;
+      &:first-child {
+        border-radius: 3px 0 0 3px;
+      }
+      &:last-child {
+        border-radius: 0 3px 3px 0;
+      }
+    }
+  }
   .reset-ul {
     @include reset-ul;
   }
